--- a/sass/partials/_form.scss
+++ b/sass/partials/_form.scss
@@ -1,14 +1,15 @@
 .login-form,
 .add-edit-delete-form {
-  max-width: 400px;
-  margin: 70px auto;
+  margin: 50px 20px;
   background-color: $color-white;
-  padding: 40px 50px 70px 50px;
+  padding: 30px 20px 50px 20px;
   border-radius: 5px;
   box-shadow: 6px 6px 6px $color-input-fields;
 
-  @media (max-width: $mobile-width) {
-    padding: 30px 20px 50px 20px;
+  @media (min-width: $tablet-min-width) {
+    padding: 40px 50px 70px 50px;
+    max-width: 400px;
+    margin: 70px auto;
   }
 
   .form-content {
