--- a/sass/partials/_heading.scss
+++ b/sass/partials/_heading.scss
@@ -10,6 +10,10 @@
     text-transform: uppercase;
   }
 
+  a.active {
+    background-color: $color-brand;
+  }
+
   .logo {
     font-family: $font-heading;
     font-size: 1.1em;
