--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,9 @@ footer {
 }
 
 .login-form input,
-.add-edit-delete-form input {
+.login-form textarea,
+.add-edit-delete-form input,
+.add-edit-delete-form textarea {
   height: 45px;
   width: 100%;
   font-size: 1em;
@@ -313,7 +315,9 @@ footer {
 
 @media (min-width: 650px) {
   .login-form input,
-  .add-edit-delete-form input {
+  .login-form textarea,
+  .add-edit-delete-form input,
+  .add-edit-delete-form textarea {
     height: 60px;
     font-size: 1.2em;
   }
