--- a/css/style.css
+++ b/css/style.css
@@ -261,20 +261,20 @@ img {
 
 @media (min-width: 650px) {
   .menu {
-    padding: 10px 30px;
+    padding: 15px 30px 10px 30px;
   }
   .menu .logo {
-    font-size: 2.1em;
+    font-size: 1.9em;
   }
   .menu .fa-circle {
     font-size: 1em;
   }
   .menu li a {
-    padding: 10px;
+    padding: 5px;
     font-size: 1.2em;
   }
   .menu li {
-    margin: 15px;
+    margin: 10px;
   }
 }
 
