--- a/sass/partials/_heading.scss
+++ b/sass/partials/_heading.scss
@@ -72,10 +72,10 @@
   }
 
   @media (min-width: $tablet-min-width) {
-    padding: 10px 30px;
+    padding: 15px 30px 10px 30px;
 
     .logo {
-      font-size: 2.1em;
+      font-size: 1.9em;
     }
 
     .fa-circle {
@@ -83,12 +83,12 @@
     }
 
     li a {
-      padding: 10px;
+      padding: 5px;
       font-size: 1.2em;
     }
 
     li {
-      margin: 15px;
+      margin: 10px;
     }
   }
 }
