--- a/sass/partials/_heading.scss
+++ b/sass/partials/_heading.scss
@@ -22,6 +22,7 @@
     height: 30px;
     font-size: 0.8em;
     margin-bottom: 15px;
+    color: $color-header-footer;
   }
 
   a.active {
@@ -39,7 +40,7 @@
 
   li a {
     padding: 2px;
-    font-size: 0.9em;
+    font-size: 1em;
   }
 
   ul {
