--- a/sass/partials/_buttons.scss
+++ b/sass/partials/_buttons.scss
@@ -1,4 +1,5 @@
-.btn {
+.btn,
+.cta {
   height: 60px;
   width: 100%;
   font-size: 1.2em;
@@ -8,8 +9,7 @@
   color: $color-white;
   box-shadow: 4px 4px 4px $color-input-fields;
 
-  &.orange,
-  &.cta-add-to-cart {
+  &.orange {
     background-color: $color-brand;
     border: $color-brand 1px solid;
 
@@ -19,7 +19,8 @@
     }
   }
 
-  &.login-add {
+  &.login-add,
+  &.add-to-cart {
     background-color: $color-sucess;
     border: $color-sucess 1px solid;
 
