--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,10 @@ footer {
   }
 }
 
+.product-page-container .no-products {
+  margin: 10px;
+}
+
 .product-page-container .product-container {
   display: -ms-grid;
   display: grid;
