--- a/sass/partials/_form.scss
+++ b/sass/partials/_form.scss
@@ -1,5 +1,6 @@
 .login-form,
-.add-edit-delete-form {
+.add-edit-delete-form,
+.edit-delete-form {
   margin: 50px 20px;
   background-color: $color-white;
   padding: 30px 20px 50px 20px;
@@ -51,6 +52,10 @@
       height: 45px;
     }
   }
+}
+
+.edit-delete-form {
+  display: none;
 }
 
 // .search {
