--- a/sass/partials/_heading.scss
+++ b/sass/partials/_heading.scss
@@ -33,7 +33,7 @@
   }
 
   a.active {
-    background-color: $color-brand;
+    background-color: lighten($color: $color-header-footer, $amount: 25);
   }
 
   .logo {
@@ -50,7 +50,7 @@
     font-size: 1em;
 
     &:hover {
-      background: lighten($color-brand, 5%);
+      background: lighten($color: $color-header-footer, $amount: 25);
     }
   }
 
