--- a/css/style.css
+++ b/css/style.css
@@ -188,11 +188,11 @@ img {
 .where-am-i-container li,
 .fa-chevron-right {
   display: inline;
-  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .where-am-i-now {
-  color: #7f7f7f;
+  text-decoration: underline;
 }
 
 .menu {
