--- a/css/style.css
+++ b/css/style.css
@@ -659,6 +659,13 @@ footer {
   font-size: 0.8em;
 }
 
+.product-content img {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .product-content:hover {
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
