--- a/css/style.css
+++ b/css/style.css
@@ -312,21 +312,44 @@ img {
 }
 
 footer {
-  margin-top: 150px;
-  padding: 40px;
+  margin-top: 40px;
+  padding: 30px;
   background-color: #121212;
-  color: #f2f2f2;
-  text-align: center;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 2rem;
 }
 
-.fa-facebook-f,
-.fa-instagram,
-.fa-snapchat-ghost {
+footer a {
   color: #f2f2f2;
+  font-size: 0.8em;
+}
+
+@media (min-width: 650px) {
+  footer a {
+    font-size: 1em;
+  }
+}
+
+footer .footer-contact a {
+  display: block;
+  text-decoration: underline;
+}
+
+footer .fa-facebook-f,
+footer .fa-instagram,
+footer .fa-snapchat-ghost {
   font-size: 1.7em;
-  margin: 0px 10px 20px 10px;
+  margin-right: 15px;
 }
 
 .login-form,
