--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,16 +1,31 @@
 footer {
-  margin-top: 150px;
-  padding: 40px;
+  margin-top: 40px;
+  padding: 30px;
   background-color: $color-header-footer;
-  color: $color-white;
-  text-align: center;
-  flex-shrink: 0;
-}
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
 
-.fa-facebook-f,
-.fa-instagram,
-.fa-snapchat-ghost {
-  color: $color-white;
-  font-size: 1.7em;
-  margin: 0px 10px 20px 10px;
+  a {
+    color: $color-white;
+    font-size: 0.8em;
+
+    @media (min-width: $tablet-min-width) {
+      font-size: 1em;
+    }
+  }
+
+  .footer-contact a {
+    display: block;
+    text-decoration: underline;
+  }
+
+  .fa-facebook-f,
+  .fa-instagram,
+  .fa-snapchat-ghost {
+    font-size: 1.7em;
+    margin-right: 15px;
+  }
 }
