--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -6,15 +6,11 @@ footer {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 3rem;
 
   a {
     color: $color-white;
-    font-size: 0.8em;
-
-    @media (min-width: $tablet-min-width) {
-      font-size: 1em;
-    }
+    padding-bottom: 10px;
   }
 
   .footer-contact a {
@@ -26,6 +22,6 @@ footer {
   .fa-instagram,
   .fa-snapchat-ghost {
     font-size: 1.7em;
-    margin-right: 15px;
+    margin-right: 20px;
   }
 }
