--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -2,7 +2,7 @@ $color-header-footer: #121212;
 $color-background: #e5e5e3;
 $color-brand: #d85c17;
 $color-white: #f2f2f2;
-$color-sucess: #238b3f;
+$color-sucess: #3e785e;
 $color-error: #d82617;
 $color-input-fields: #cbcbcb;
 
