--- a/css/style.css
+++ b/css/style.css
@@ -70,15 +70,15 @@ p {
 .btn.login-add, .btn.add-to-cart,
 .cta.login-add,
 .cta.add-to-cart {
-  background-color: #238b3f;
-  border: #238b3f 1px solid;
+  background-color: #3e785e;
+  border: #3e785e 1px solid;
 }
 
 .btn.login-add:hover, .btn.add-to-cart:hover,
 .cta.login-add:hover,
 .cta.add-to-cart:hover {
   background-color: #f2f2f2;
-  color: #238b3f;
+  color: #3e785e;
 }
 
 .btn.delete,
@@ -146,7 +146,7 @@ img {
 }
 
 .message.success {
-  background-color: #238b3f;
+  background-color: #3e785e;
 }
 
 .loader {
