--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -3,7 +3,7 @@ $color-background: #e5e5e3;
 $color-brand: #d85c17;
 $color-white: #f2f2f2;
 $color-sucess: #3e785e;
-$color-error: #d82617;
+$color-error: #a12815;
 $color-input-fields: #cbcbcb;
 
 $font-primary: "IBM Plex Sans Thai Looped", sans-serif;
