--- a/css/style.css
+++ b/css/style.css
@@ -83,14 +83,14 @@ p {
 
 .btn.delete,
 .cta.delete {
-  background-color: #d82617;
-  border: #d82617 1px solid;
+  background-color: #a12815;
+  border: #a12815 1px solid;
 }
 
 .btn.delete:hover,
 .cta.delete:hover {
   background-color: #f2f2f2;
-  color: #d82617;
+  color: #a12815;
 }
 
 html,
@@ -142,7 +142,7 @@ img {
 }
 
 .message.error {
-  background-color: #d82617;
+  background-color: #a12815;
 }
 
 .message.success {
