--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,6 +1,6 @@
 $color-header-footer: #121212;
 $color-background: #e5e5e3;
-$color-brand: #d85c17;
+$color-brand: #b74e15;
 $color-white: #f2f2f2;
 $color-sucess: #3e785e;
 $color-error: #a12815;
