--- a/css/style.css
+++ b/css/style.css
@@ -53,43 +53,50 @@ p {
   color: #f2f2f2;
   -webkit-box-shadow: 4px 4px 4px #cbcbcb;
           box-shadow: 4px 4px 4px #cbcbcb;
+  border: none;
 }
 
-.btn.orange,
-.cta.orange {
+.btn.btn-logout,
+.cta.btn-logout {
+  width: 150px;
+  font-size: 1em;
+  height: 30px;
+  -webkit-box-shadow: 2px 2px 2px #893b10;
+          box-shadow: 2px 2px 2px #893b10;
+}
+
+.btn.orange, .btn.btn-logout,
+.cta.orange,
+.cta.btn-logout {
   background-color: #b74e15;
-  border: #b74e15 1px solid;
 }
 
-.btn.orange:hover,
-.cta.orange:hover {
-  background-color: #f2f2f2;
+.btn.orange:hover, .btn.btn-logout:hover,
+.cta.orange:hover,
+.cta.btn-logout:hover {
+  background-color: #893b10;
 }
 
 .btn.login-add, .btn.add-to-cart,
 .cta.login-add,
 .cta.add-to-cart {
   background-color: #3e785e;
-  border: #3e785e 1px solid;
 }
 
 .btn.login-add:hover, .btn.add-to-cart:hover,
 .cta.login-add:hover,
 .cta.add-to-cart:hover {
-  background-color: #f2f2f2;
-  color: #3e785e;
+  background-color: #2d5644;
 }
 
 .btn.delete,
 .cta.delete {
   background-color: #a12815;
-  border: #a12815 1px solid;
 }
 
 .btn.delete:hover,
 .cta.delete:hover {
-  background-color: #f2f2f2;
-  color: #a12815;
+  background-color: #741d0f;
 }
 
 html,
@@ -138,6 +145,7 @@ img {
   padding: 15px;
   margin: 10px 0px 20px 0px;
   border-radius: 5px;
+  text-align: center;
 }
 
 .message.error {
@@ -185,6 +193,10 @@ img {
   margin: 20px 0px 20px 0px;
 }
 
+.where-am-i-container i {
+  font-size: 1.2em;
+}
+
 .where-am-i-container li,
 .fa-chevron-right {
   display: inline;
@@ -224,22 +236,6 @@ img {
 .menu a {
   color: #f2f2f2;
   text-transform: uppercase;
-}
-
-.menu .btn-logout {
-  height: 30px;
-  font-size: 0.9em;
-  margin-bottom: 15px;
-  color: #121212;
-  border: none;
-  border-radius: 5px;
-  -webkit-box-shadow: 2px 2px 2px #787878;
-          box-shadow: 2px 2px 2px #787878;
-}
-
-.menu .btn-logout:hover {
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
 }
 
 .menu a.active {
@@ -612,56 +608,57 @@ footer .fa-snapchat-ghost {
   }
 }
 
+.product-page-container {
+  max-width: 1600px;
+  margin: auto;
+}
+
 .product-page-container .product-page-text {
   margin: 10px;
+}
+
+.product-page-container .search-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .product-page-container .search {
   height: 40px;
   font-size: 0.8em;
-  width: 250px;
+  width: 100%;
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 5px -10px 5px 10px;
   background-color: #e5e5e3;
   border: none;
 }
 
-@media (min-width: 650px) {
-  .product-page-container .search {
-    width: 400px;
-  }
-}
-
-.product-page-container .no-products {
-  margin: 10px;
+.product-page-container .product-heading-container {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .product-page-container .product-container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(50%, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
-}
-
-@media (min-width: 650px) {
-  .product-page-container .product-container {
-    -ms-grid-columns: (minmax(33%, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
-  }
-}
-
-@media (min-width: 900px) {
-  .product-page-container .product-container {
-    -ms-grid-columns: (minmax(25%, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
-  }
-}
-
-@media (min-width: 900px) {
-  .product-page-container {
-    max-width: 1500px;
-    margin: 70px auto;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .product-content {
