--- a/sass/partials/_buttons.scss
+++ b/sass/partials/_buttons.scss
@@ -8,34 +8,38 @@
   margin-bottom: 15px;
   color: $color-white;
   box-shadow: 4px 4px 4px $color-input-fields;
+  border: none;
 
-  &.orange {
+  &.btn-logout {
+    width: 150px;
+    font-size: 1em;
+    height: 30px;
+    box-shadow: 2px 2px 2px darken($color: $color-brand, $amount: 10);
+  }
+
+  &.orange,
+  &.btn-logout {
     background-color: $color-brand;
-    border: $color-brand 1px solid;
 
     &:hover {
-      background-color: $color-white;
+      background-color: darken($color: $color-brand, $amount: 10);
     }
   }
 
   &.login-add,
   &.add-to-cart {
     background-color: $color-sucess;
-    border: $color-sucess 1px solid;
 
     &:hover {
-      background-color: $color-white;
-      color: $color-sucess;
+      background-color: darken($color: $color-sucess, $amount: 10);
     }
   }
 
   &.delete {
     background-color: $color-error;
-    border: $color-error 1px solid;
 
     &:hover {
-      background-color: $color-white;
-      color: $color-error;
+      background-color: darken($color: $color-error, $amount: 10);
     }
   }
 }
